# docs/swagger.json
@@ -24,7 +24,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.TodoItem"
+                            "$ref": "#/definitions/main.addTodoItemDto"
                         }
                     }
                 ],
@@ -51,7 +51,7 @@
                 "parameters": [
                     {
                         "type": "integer",
-                        "description": "search book by id",
+                        "description": "id for search todo item",
                         "name": "id",
                         "in": "path",
                         "required": true
@@ -61,7 +61,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/model.TodoItem"
+                            "$ref": "#/definitions/models.TodoItem"
                         }
                     }
                 }
@@ -87,7 +87,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/model.TodoItem"
+                            "$ref": "#/definitions/models.TodoItem"
                         }
                     }
                 ],
@@ -100,7 +100,18 @@
         }
     },
     "definitions": {
-        "model.TodoItem": {
+        "main.addTodoItemDto": {
+            "type": "object",
+            "properties": {
+                "description": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.TodoItem": {
             "type": "object",
             "properties": {
                 "description": {
